Fixed alignment on product page

--- a/client/src/components/ProductPage.css
+++ b/client/src/components/ProductPage.css
@@ -13,12 +13,12 @@
     font-family: 'Source Sans Pro', sans-serif;
     color: var(--on-background-color);
     padding: 0;
-    margin: 0.5% 2%;
+    margin: 0.5% 0em;
     margin-right: 0;
 }
 
 .product-page-text-nomargin {
-    margin: 0% 3.2%;
+    margin: 0;
 }
 
 .product-page-title {
@@ -72,6 +72,6 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
-    margin-right: 5em;
+    padding: 0 1em;
 }
 
